# opendps

./: .coderabbit.yaml  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ai-review.yml  ci.yml  pr-review.yml  release.yml
crates/opendps-agent/: Cargo.toml
crates/opendps-agent/benches/: bench_failsafe.rs
crates/opendps-agent/src/: failsafe.rs  ipc.rs  lib.rs  main.rs  metrics.rs  nvml_backend.rs
crates/opendps-sim/: Cargo.toml
crates/opendps-sim/src/: lib.rs
deploy/: agent-rust.Dockerfile  alerting.yml  compose.yml  controller.Dockerfile  dcgm-fields.csv  ipmi-exporter.yml  operator.Dockerfile  prometheus.yml  quota-demo.json  topology-demo.json  topology-jobdemo.json  topology-rackdemo.json
deploy/grafana/dashboards/: opendps-overview.json
deploy/k8s/: operator-deployment.yaml
deploy/k8s/crds/: jobpowerpolicy.yaml  powerdomain.yaml  powerpolicy.yaml
deploy/k8s/examples/: demo-jobpowerpolicy.yaml  demo-powerdomain.yaml  demo-powerpolicy.yaml
deploy/sim-metrics/: Dockerfile  sim_exporter.py
docs/: ARCHITECTURE.md  INSTALL.md  N12-job-awareness.md  N13-quota-enforcement.md  N14-multinode.md  N15-priority-preemption.md  N16-thermal-aware.md  N17-rack-tier.md  N19-budget-adoption.md  N20-energy-showback.md  ROADMAP.md  hardware-validation.md
scripts/: demo.sh  hw_failsafe.sh  security-check.sh  setup-venv.sh
src/opendps/: __init__.py
src/opendps/agent/: failsafe.py  job_tracker.py  nvml_agent.py  process.py
src/opendps/brain/: __init__.py  cvxpy_brain.py  dpm.py  job_aware_prs.py  priority_prs.py  prs.py  quota_prs.py  thermal_prs.py
src/opendps/collector/: sample.py
src/opendps/controller/: __init__.py  agent_bridge.py  cluster_coordinator.py  standalone.py
src/opendps/operator/: __main__.py  handlers.py
src/opendps/pdn/: __init__.py  model.py  presets.py  quota.py  topology.py
src/opendps/sim/: __init__.py  backend.py  presets.py  protocol.py
src/opendps/telemetry/: __init__.py  energy.py  metrics.py  model.py  prom_client.py  redfish_scraper.py
tests/: test_actuator_wiring.py  test_agent_bridge.py  test_agent_failsafe.py  test_brain_cvxpy.py  test_brain_dpm.py  test_brain_job_aware_n12.py  test_brain_priority_n15.py  test_brain_prs.py  test_brain_prs_n5.py  test_brain_thermal_n16.py  test_cluster_coordinator.py  test_controller_n7.py  test_energy_n20.py  test_healthz.py  test_job_tracker.py  test_model.py  test_node_overhead_n18.py  test_nvml_agent.py  test_operator.py  test_operator_k8s_integration.py  test_operator_n6.py  test_pdn.py  test_prom_client.py  test_quota_prs.py  test_rack_n17.py  test_redfish_scraper.py  test_sim.py
(+1 files in other folders)
